[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Level_1.gd" type="Script" id=2]
[ext_resource path="res://HUD.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Box.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Deadzone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Spot.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sokoban_tilesheet.png" type="Texture" id=8]
[ext_resource path="res://assets/No_Input.png" type="Texture" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=2]
0/name = "sokoban_tilesheet.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 576, 384, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="DynamicFontData" id=6]
font_path = "res://fonts/ALBA____.TTF"

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = SubResource( 6 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://fonts/ALBA____.TTF"

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = SubResource( 7 )

[node name="Level_1" type="Node2D"]
script = ExtResource( 2 )

[node name="Spot" parent="." instance=ExtResource( 7 )]
position = Vector2( 896, 448 )

[node name="TileMap" type="TileMap" parent="." groups=["walls"]]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 196610, 0, 0, 196613, 0, 0, 196625, 0, 0, 262146, 0, 0, 262149, 0, 0, 262161, 0, 0, 327682, 0, 0, 327685, 0, 0, 327692, 0, 0, 327697, 0, 0, 393218, 0, 0, 393228, 0, 0, 393233, 0, 0, 458754, 0, 0, 458764, 0, 0, 458769, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0 )

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 192, 192 )

[node name="Box" parent="." instance=ExtResource( 4 )]
position = Vector2( 448, 384 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="WinLabel" type="Label" parent="HUD"]
margin_left = 384.0
margin_top = 50.0
margin_right = 960.0
margin_bottom = 128.0
theme = SubResource( 4 )
align = 1

[node name="LevelLabel" type="Label" parent="HUD"]
margin_right = 256.0
margin_bottom = 50.0
theme = SubResource( 4 )
custom_fonts/font = SubResource( 5 )

[node name="MoveLabel" type="Label" parent="HUD"]
margin_top = 50.0
margin_right = 256.0
margin_bottom = 100.0
theme = SubResource( 4 )
custom_fonts/font = SubResource( 5 )

[node name="LoseLabel" type="Label" parent="HUD"]
margin_left = 448.0
margin_right = 832.0
margin_bottom = 128.0
theme = SubResource( 4 )
align = 1

[node name="CountdownLabel" type="Label" parent="HUD"]
margin_left = 384.0
margin_top = 576.0
margin_right = 928.0
margin_bottom = 640.0
theme = SubResource( 4 )
align = 1

[node name="Deadzones" type="Node2D" parent="."]

[node name="Deadzone" parent="Deadzones" instance=ExtResource( 5 )]
position = Vector2( 256, 192 )

[node name="Deadzone2" parent="Deadzones" instance=ExtResource( 5 )]
position = Vector2( 192, 192 )

[node name="Deadzone3" parent="Deadzones" instance=ExtResource( 5 )]
position = Vector2( 192, 448 )

[node name="Deadzone4" parent="Deadzones" instance=ExtResource( 5 )]
position = Vector2( 704, 448 )

[node name="Deadzone5" parent="Deadzones" instance=ExtResource( 5 )]
position = Vector2( 384, 192 )

[node name="Deadzone6" parent="Deadzones" instance=ExtResource( 5 )]
position = Vector2( 1024, 192 )

[node name="Deadzone7" parent="Deadzones" instance=ExtResource( 5 )]
position = Vector2( 1024, 448 )

[node name="Deadzone8" parent="Deadzones" instance=ExtResource( 5 )]
position = Vector2( 832, 448 )

[node name="Inputs" type="Node2D" parent="."]

[node name="Input" type="Sprite" parent="Inputs"]
position = Vector2( 1088, 576 )
scale = Vector2( 0.372, 0.412903 )
texture = ExtResource( 9 )
centered = false

[connection signal="hit" from="Spot" to="." method="_on_Spot_hit"]
[connection signal="hit" from="Deadzones/Deadzone" to="." method="_on_Deadzone_hit"]
[connection signal="hit" from="Deadzones/Deadzone2" to="." method="_on_Deadzone_hit"]
[connection signal="hit" from="Deadzones/Deadzone3" to="." method="_on_Deadzone_hit"]
[connection signal="hit" from="Deadzones/Deadzone4" to="." method="_on_Deadzone_hit"]
[connection signal="hit" from="Deadzones/Deadzone5" to="." method="_on_Deadzone_hit"]
[connection signal="hit" from="Deadzones/Deadzone6" to="." method="_on_Deadzone_hit"]
[connection signal="hit" from="Deadzones/Deadzone7" to="." method="_on_Deadzone_hit"]
[connection signal="hit" from="Deadzones/Deadzone8" to="." method="_on_Deadzone_hit"]
